# finrepin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.override.yaml  compose.prod.yaml  compose.yaml  pyproject.toml  sample_report.html
.github/workflows/: ci.yml
deploy/: deploy.sh  finrepin-deploy.service  finrepin-deploy.timer
grafana/dashboards/: financial-statements.json  market-overview.json  spain-housing.json  ticker-fundamentals.json
grafana/geo/: spain-ccaa.geojson  spain-provinces.geojson
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_metric_views.py  0003_ticker_requests.py  0004_mcap_and_shares.py  0005_statement_views.py  0006_full_statement_views.py  0007_currency_views.py  0008_valuation_metrics.py  0009_interest_rates.py  0010_ecb_euro_rate.py  0011_coinmetrics_onchain.py  0012_price_metric.py  0013_widen_price_numeric.py  0014_drop_btc_rcap.py  0015_housing_prices.py  0016_region_hierarchy.py  0017_rename_appraisal_indicator.py  0018_purge_sample_observations.py
src/fintracker/: __init__.py  config.py  db.py  healthcheck.py  heartbeat.py  migrate.py  models.py  run.py  scheduler.py  seed.py  webapp.py
tests/: test_censo.py  test_coinmetrics.py  test_ecb.py  test_forex.py  test_fred.py  test_fundamentals.py  test_housing.py  test_mivau.py  test_ondemand.py  test_pcaxis.py  test_prices.py  test_report.py  test_territory.py  test_visados.py  test_yahoo_fundamentals.py
web/: app.js  index.html  sample-dataset.json  styles.css
web/geo/: spain-provinces.geojson
(+34 files in other folders)
