[project]
name = "fintracker"
version = "0.1.0"
description = "Self-hosted, single-user financial tracker: daily market data + SEC fundamentals into Postgres, surfaced in Grafana, with a weekly email report."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "apscheduler>=3.10,<4.0",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "requests>=2.32",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
]

[project.scripts]
fintracker = "fintracker.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fintracker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["fintracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
